vX.Y.Z (YYYY-MM-DD)

- Add "version" script to show kit version and version of software that may be
  used by the kit
- Update AppImage to install dbttools v0.4.1 for its version information
  reporting
- Use .svg file for AppImage; remove .png file.

v0.50.1 (2023-03-03)

- Update README with correct DBT Tools version v0.4.0

v0.50.0 (2023-02-28)

- Stop forking plot generation when generating reports since this may cause the
  system to run out of memory
- Update container scripts to use -u flag, per changed in v0.49.0
- Set ARCH to x86_64, if not otherwise specified, for creating AppImage
- Fix generate-report bug where pidstat.txt was not being processed to create
  pidstat.csv files
- Fix generate-report HTML and PDF generation logic where .rst and .html files
  were not being processed correctly
- Fix generate-report handling of identifying driver and client processes
- Rewrite rst2html5.py's #! back to /usr/bin/env python3 for the AppImage
- Post processing (post-process) in R now reports p-value for visual
  inspection of goodness of warehouse distribution, as well as district
  distribution per warehouse, as opposed to displaying the raw counts; also
  added to Julia version
- Add tools to creating flame graphs to the AppImage
- Require DBT Tools (dbttools) v0.4.0
- Add perl to AppImage

v0.49.1 (2023-02-17)

- Update pgsql-build-db to take database name as a command line argument
- Update to post-process script to install Julia packages only after verifying
  the Julia version of the script exists
- Add Z flag for mounting source directory when building the AppImage with
  container/build-appimage for shared volume labeling

v0.49.0 (2023-02-09)

- Fix use of ignore file for podman use
- Allow user to specify container engine
- Add some C directives to support building on older C tool chains, in
  particular CentOS 7
- Add AppImage files for creating standalone single binary with limited
  functionality
- Add Podman files for creating an AppImage